--- a/index.Rmd
+++ b/index.Rmd
@@ -2,20 +2,19 @@
 title: "A Simple Cookbook for Wrangling and Visualization"
 author: "Bernard Liew"
 date: "`r Sys.Date()`"
-output: bookdown::gitbook
 documentclass: book
 link-citations: yes
 mainfont: Arial
 monofont: Courier New
 monofontoptions: Scale=0.7
-bibliography: [book.bib]
+bibliography: book.bib
 site: bookdown::bookdown_site
 biblio-style: apalike
 ---
 
 # Preface {#intro}
 
-The purpose of this book is to help you CLEAN your data and produce AMAZING graphics **EASILY** but not fast at first.
+The purpose of this book is to teach you skills in computer programming to help you analyse commonly collected data in a Sports Science and Coaching environment.  
 
 ```{r, echo = FALSE}
 vembedr::embed_url( "https://youtu.be/tRp6mPDR73k")
@@ -32,7 +31,7 @@ This book does not cover any one topic in extensive detail. If you are intereste
 
 ## Why is R so great?
 
-1. R is 100\% free and as a result, has a huge support community. Unlike SPSS and even Excel, R is, and always will be completely free. This doesn't just help your wallet - it means that a huge community of R programmers who will constantly develop and distribute new R functionality and packages at a speed that leaves all those other packages in the dust! If you ever have a question about how to implement something in R, a quick Google search will lead you to your answer virtually every single time.
+1. R is 100\% free and as a result, has a huge support community. Unlike SPSS and even Excel, R is, and always will be completely free. This means that you can actually apply these skills to your workplace after you graduate. There is also a huge community of R programmers who will constantly develop and distribute new R functionality and packages at a speed that leaves all those other packages in the dust! If you ever have a question about how to implement something in R, a quick Google search will lead you to your answer virtually every single time.
 
 2. R is incredibly versatile. You can use R to do everything from calculating simple summary statistics, to performing complex simulations to creating gorgeous plots. If you can imagine an analytical task, you can almost certainly implement it in R.
 
@@ -52,7 +51,7 @@ knitr::include_graphics("images/index/rrelationship.png")
 2. There is nothing more *satisfying* than when your code *does* work!
 
 
-Anything worth doing, from losing weight to getting a degree, takes time. Learning R is no different. Especially if this is your first experience programming, you are going to experience a *lot* of headaches when you get started. You will run into error after error and pound your fists against the table screaming: "WHY ISN'T MY CODE WORKING?!?!? There must be something wrong with this stupid software!!!" You will spend hours trying to find a bug in your code, only to find that - frustratingly enough, you had had an extra space or missed a comma somewhere. You'll then wonder why you ever decided to learn R when (::sigh::) SPSS was so "nice and easy."
+Anything worth doing, from losing weight to getting a degree, takes time. Learning R is no different. Especially if this is your first experience programming, you are going to experience a *lot* of headaches when you get started. You will run into error after error and pound your fists against the table screaming: "WHY ISN'T MY CODE WORKING?!?!? There must be something wrong with this stupid software!!!" You will spend hours trying to find a bug in your code, only to find that - frustratingly enough, you had had an extra space or missed a comma somewhere. You'll then wonder why you ever decided to learn R when SPSS was so "nice and easy."
 
 
 ```{r gosling, echo = FALSE, fig.height=15, fig.width=10, fig.cap = "When you first meet R, it will look so fugly that you'll wonder if this is all some kind of sick joke. But trust me, once you learn how to talk to it, and clean it up a bit, all your friends will be crazy jealous.", fig.align='center'}
@@ -64,7 +63,7 @@ Trust me, as you gain more programming experience, you'll experience fewer and f
 
 ## 3 things students get wrong
 
-Based on teaching the previous cohort, there are 3 common errors students make, which will result in errors, leaving many scratching their head, feeling frustrated. Be aware of these errors, and do not fall into the trap.
+There are 3 common errors students make which will result in alot of head banging, and feeling frustrated. Be aware of these errors, and do not fall into the trap.
 
 ### Wrong method of launching software
 
