--- a/08-Assignment.Rmd
+++ b/08-Assignment.Rmd
@@ -47,7 +47,7 @@ downloadthis::download_file(
 
 **4:** Rename columns. Rename all columns to lower cases, without white spaces. See Recipe \@ref(WRANGLE-RENAME-VARIABLES).
 
-**5:** Maker characters to numeric. Replace `XXX` with the appropriate function to convert all columns apart from time from character to numbers. See Recipe \@ref(WRANGLE-CHARACTER-2-NUMERIC).
+**5:** Make characters to numeric. Replace `XXX` with the appropriate function to convert all columns apart from time from character to numbers. See Recipe \@ref(WRANGLE-CHARACTER-2-NUMERIC).
 
 **6:** Find the average 30 sec value (between 2:30 to 3:00min) per stage for all variables. Replace `XXX` with the appropriate values. See Recipe \@ref(WRANGLE2-SUMMARIZE-GROUPBY).
 
@@ -105,7 +105,7 @@ curve_intersect <- function (curve1, curve2, empirical = TRUE, domain = NULL)
 }
 ## End ----------------
 
-## Import data 
+## Import data (Task 1)
 
 ### Import the sheet with the Vo2 data
 dat_vo2 <-  read.xlsx (xlsxFile = "data/XXX.xlsx",
@@ -128,7 +128,7 @@ good_imu <-  read.xlsx (xlsxFile = "data/XXX.xlsx",
 bad_imu <-  read.xlsx (xlsxFile = "data/XXX.xlsx",
                        sheet = "XXX")
 
-## Analyze FMS data ------------------------------------------------------------
+## Analyze FMS data (Task 2) ---------------------------------------------------
 
 ### Plot FMS 
 
@@ -142,7 +142,7 @@ ggsave(filename = "ind_fms.png",
        unit = "cm", 
        dpi = 200)
 
-## Analyze drop jump data ------------------------------------------------------
+## Analyze drop jump data (Task 3) ---------------------------------------------
 
 # Maximal bad leg impact value
 max_bad_ampl <- max(bad_imu %>% select (XXX))
@@ -160,7 +160,7 @@ symmmetry_index
 
 ## Analyze VO2 data ------------------------------------------------------------
 
-### Rename column names of Vo2 data 
+### Rename column names of Vo2 data (Task 4)
 
 new_names <- c(XXX)
 
@@ -171,7 +171,7 @@ colnames (dat_vo2)  <- new_names
 dat_vo2 <- dat_vo2 %>% 
   slice (-c(1))
 
-### Convert column type of Vo2 data 
+### Convert column type of Vo2 data (Task 5)
 
 dat_vo2 <-  dat_vo2 %>%
   mutate (bf = XXX (bf),
@@ -193,7 +193,7 @@ dat_vo2 <-  dat_vo2 %>%
 dat_vo2 <- dat_vo2 %>%
   mutate (stage = cut_interval(time, length = 210, labels = FALSE))
 
-### Calculate average 30s data per stage of Vo2 data 
+### Calculate average 30s data per stage of Vo2 data (Task 6)
 
 dat_vo2_summ <- dat_vo2 %>%
   group_by(XXX) %>% # for each group
@@ -209,14 +209,14 @@ dat_vo2_summ <- dat_vo2 %>%
              hr = mean (hr))
 
 
-### Combine Vo2 staged data with lactate data 
+### Combine Vo2 staged data with lactate data (Task 7)
 
 dat_vo2_comb <- dat_vo2_summ %>%
   inner_join(dat_stage, by = "XXX")
 
 ### Plot
 
-#### Lactate (Task 9)
+#### Lactate (Task 8)
 
 f <- ggplot (dat_vo2_comb) +
   geom_line (aes (x = XXX, y = XXX), colour = "XXX", size = 1.5) + 
@@ -236,7 +236,7 @@ ggsave(filename = "lactate.png",
        unit = "cm", 
        dpi = 200)
 
-#### Heart rate 
+#### Heart rate (Task 9)
 
 f <- ggplot (dat_vo2_comb) +
   geom_line (aes (x = XXX, y = XXX), colour = "XXX", size = 1.5) + 
@@ -256,7 +256,7 @@ ggsave(filename = "heartrate.png",
        unit = "cm", 
        dpi = 200)
 
-#### Export table 
+#### Export table (Task 10)
 
 write.xlsx(x = XXX,
            sheetName = "vo2",
